--- a/styles/_Reset.scss
+++ b/styles/_Reset.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('../public/Background.png');
+  background-image: url('../public/images/Background.png');
   background-size: 22px;
   background-position-x: 11px;
   background-position-y: 11px;
