--- a/components/verify-mail/VerifyMail.module.scss
+++ b/components/verify-mail/VerifyMail.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: $app-height;
   gap: $spacing8;
   justify-items: center;
   align-content: center;
