--- a/global_components/Auth/Auth.module.scss
+++ b/global_components/Auth/Auth.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
   display: grid;
   width: 100%;
-  height: 100vh;
+  height: $app-height;
   justify-content: center;
   align-items: center;
   color: $green;
