add dashboard layout

--- a/components/dashboard/dashboard.module.scss
+++ b/components/dashboard/dashboard.module.scss
@@ -2,4 +2,25 @@
 
 .wrapper {
   display: grid;
+
+  .content {
+    display: grid;
+    overflow: auto;
+    height: calc($app-height - 50px - 65px);
+    padding: $spacing10 $spacing5 $spacing5;
+
+    @media screen and (min-width: $tablet) {
+      padding: 90px $spacing11 $spacing11;
+    }
+  }
+
+  @media screen and (min-width: $tablet) {
+    grid-template-columns: 1fr auto;
+
+    .content {
+      height: $app-height;
+      display: grid;
+      overflow: auto;
+    }
+  }
 }
