--- a/global_components/Input/Input.module.scss
+++ b/global_components/Input/Input.module.scss
@@ -5,6 +5,9 @@
   grid-template-columns: 1fr auto;
   width: 100%;
   transition: 0.2s;
+  height: 40px;
+  border-radius: $border-radius;
+  overflow: hidden;
 
   &.green {
     background-color: $green-light;
@@ -37,7 +40,7 @@
   input {
     border: none;
     background-color: transparent;
-    padding: $spacing4 $spacing4;
+    padding: 0 $spacing4;
     font-size: $font-small;
     transition: 0.2s;
   }
