--- a/components/activities/EditView/EditView.module.scss
+++ b/components/activities/EditView/EditView.module.scss
@@ -7,6 +7,11 @@
   padding-top: $spacing11;
   justify-content: center;
 
+  .inactive {
+    opacity: 0.4;
+    pointer-events: none;
+  }
+
   .element {
     width: 700px;
   }
