add activity card overlay & time picker

--- a/global_components/ActivityCard/ActivityCard.module.scss
+++ b/global_components/ActivityCard/ActivityCard.module.scss
@@ -6,8 +6,11 @@
   background-color: $white;
   border: $border;
   border-radius: $border-radius;
+  position: relative;
+  overflow: hidden;
 
   .content {
+    cursor: pointer;
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
