finish timePicker component

--- a/global_components/ActivityCard/Overlay/Overlay.module.scss
+++ b/global_components/ActivityCard/Overlay/Overlay.module.scss
@@ -143,5 +143,12 @@
         color: $red;
       }
     }
+
+    .time {
+      .fade-top,
+      .fade-bottom {
+        background-color: $red;
+      }
+    }
   }
 }
