--- a/global_components/ProgressCircle/Circles/Circles.module.scss
+++ b/global_components/ProgressCircle/Circles/Circles.module.scss
@@ -14,22 +14,22 @@
 
   &.outer {
     svg {
-      width: 100%;
-      height: 100%;
+      width: 325px;
+      height: 325px;
     }
   }
 
   &.middle {
     svg {
-      width: 89%;
-      height: 89%;
+      width: 258px;
+      height: 258px;
     }
   }
 
   &.inner {
     svg {
-      width: 76%;
-      height: 76%;
+      width: 188px;
+      height: 188px;
     }
   }
 
