--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -66,3 +66,8 @@ $app-height: var(--app-height);
   display: inline;
   box-shadow: inset 0 -12px 0px 0px $green-light;
 }
+
+@mixin underline-grey {
+  display: inline;
+  box-shadow: inset 0 -12px 0px 0px $grey-light;
+}
