--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -63,11 +63,11 @@ $border: 1px solid $black;
 $app-height: var(--app-height);
 
 @mixin underline {
-  display: inline-block;
+  display: inline;
   box-shadow: inset 0 -12px 0px 0px $green-light;
 }
 
 @mixin underline-grey {
-  display: inline-block;
+  display: inline;
   box-shadow: inset 0 -12px 0px 0px $grey-light;
 }
