add daily streak count to reward & complete on finish

--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -30,6 +30,11 @@
         font-weight: $weight-bold;
         @include underline-grey;
       }
+
+      .description {
+        font-size: $font-small;
+        margin-top: $spacing1;
+      }
     }
 
     .bottom {
