--- a/global_components/Slider/Slider.module.scss
+++ b/global_components/Slider/Slider.module.scss
@@ -38,6 +38,8 @@
   cursor: pointer;
 
   &::-webkit-slider-thumb {
+    -webkit-appearance: none;
+
     width: 10px;
     height: 40px;
     border-radius: $border-radius;
