--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -34,6 +34,7 @@ $phone: 525px;
 $tablet: 768px;
 $desktop: 1024px;
 $desktop-large: 1325px;
+$desktop-extra-large: 1500px;
 
 // spacing
 $spacing1: 0.25rem;
