--- a/components/dashboard/Activities/Activities.module.scss
+++ b/components/dashboard/Activities/Activities.module.scss
@@ -4,7 +4,7 @@
   display: grid;
   gap: $spacing6;
 
-  @media screen and (min-width: 1600px) {
+  @media screen and (min-width: $desktop) {
     gap: $spacing8;
     grid-template-columns: 1fr 1fr;
   }
