--- a/global_components/ActivityCard/Overlay/Overlay.module.scss
+++ b/global_components/ActivityCard/Overlay/Overlay.module.scss
@@ -6,14 +6,23 @@
   height: 100%;
   background-color: $green;
   position: absolute;
-  top: 0;
-  left: -14px;
+  top: -100%;
+  left: 0;
+
+  @media screen and (min-width: $phone) {
+    top: 0;
+    left: -14px;
+  }
 
   .content {
     padding: $spacing2 $spacing4;
     display: grid;
-    grid-template-columns: auto 1fr auto;
     gap: $spacing4;
+    grid-template-columns: 1fr auto;
+
+    @media screen and (min-width: $phone) {
+      grid-template-columns: auto 1fr auto;
+    }
 
     .outer-icon-wrapper {
       display: grid;
@@ -57,6 +66,7 @@
       overflow: hidden;
       position: relative;
       height: 62px;
+      align-self: center;
 
       .fade-top,
       .fade-bottom {
