WIP mobile top nav

--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
   background-color: $white;
   border: $border;
+  border-radius: $border-radius;
 
   .image {
     position: relative;
