--- a/components/dashboard/TopNav/TopNav.module.scss
+++ b/components/dashboard/TopNav/TopNav.module.scss
@@ -2,4 +2,61 @@
 
 .wrapper {
   display: grid;
+  align-items: center;
+  grid-template-columns: 1fr auto;
+  padding: 0 $spacing6;
+
+  @media screen and (min-width: $tablet) {
+    padding: 0 $spacing11;
+  }
+
+  .date {
+    display: grid;
+    gap: $spacing2;
+    grid-auto-flow: column;
+    justify-content: start;
+    align-items: center;
+    align-content: center;
+
+    p {
+      font-weight: $weight-bold;
+    }
+  }
+
+  .reward {
+    position: relative;
+    font-size: $font-h3;
+    cursor: pointer;
+
+    .counter {
+      height: 18px;
+      padding: 0 0.35rem;
+      background-color: $red;
+      border-radius: 50px;
+      display: grid;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: -3px;
+      left: 9px;
+
+      p {
+        color: $white;
+        font-size: $font-tiny;
+        font-weight: $weight-semi-bold;
+      }
+    }
+
+    .reward-tooltip {
+      width: 365px;
+      padding: $spacing6;
+      border: 1px solid $grey-light;
+      border-radius: $border-radius;
+      position: absolute;
+      z-index: 10;
+      top: $spacing7;
+      right: 0;
+      background-color: $white;
+    }
+  }
 }
