calculate reward streaks in the front end

--- a/components/dashboard/TopNav/TopNav.module.scss
+++ b/components/dashboard/TopNav/TopNav.module.scss
@@ -30,6 +30,7 @@
 
     .counter {
       height: 18px;
+      min-width: 18px;
       padding: 0 0.35rem;
       background-color: $red;
       border-radius: 50px;
