--- a/components/activities/LeftSidebar/LeftSidebar.module.scss
+++ b/components/activities/LeftSidebar/LeftSidebar.module.scss
@@ -2,12 +2,31 @@
 
 .wrapper {
   display: grid;
-  gap: $spacing6;
-  height: calc($app-height - 181px);
-  grid-template-columns: repeat(2, 220px);
+  gap: $spacing5;
+  padding: $spacing7 $spacing5 $spacing5;
+  height: calc($app-height - 50px - 65px);
   align-content: start;
-  padding: $spacing11 $spacing10;
   border-right: 1px solid $grey-light;
-  background-color: $white;
   overflow: auto;
+
+  .content {
+    display: grid;
+    gap: $spacing4;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+
+    @media screen and (min-width: $desktop-extra-large) {
+      gap: $spacing6;
+      grid-template-columns: repeat(2, 220px);
+    }
+  }
+
+  @media screen and (min-width: $desktop) {
+    padding: $spacing11 $spacing10;
+    background-color: $white;
+    height: calc($app-height - 181px);
+  }
+
+  .title {
+    @include underline;
+  }
 }
