--- a/styles/_Reset.scss
+++ b/styles/_Reset.scss
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  touch-action: pan-x pan-y;
+  height: 100%;
+}
+
 body {
   background-image: url('../public/images/Background.png');
   background-size: 22px;
