Optimize & improve TImePicker component

--- a/global_components/ActivityCard/Overlay/Overlay.module.scss
+++ b/global_components/ActivityCard/Overlay/Overlay.module.scss
@@ -90,6 +90,8 @@
       p {
         font-size: $font-large;
         font-weight: $weight-bold;
+        word-spacing: 500px;
+        text-align: center;
       }
 
       .dots {
