fix reward streaks mobile bug

--- a/global_components/RewardCard/RewardCard.module.scss
+++ b/global_components/RewardCard/RewardCard.module.scss
@@ -75,7 +75,8 @@
       .cycles-left {
         font-weight: $weight-bold;
         font-size: $font-tiny;
-        width: 53px;
+        width: 60px;
+        text-align: center;
       }
     }
   }
