limit activities & penalties to 4

--- a/components/activities/EditView/EditView.module.scss
+++ b/components/activities/EditView/EditView.module.scss
@@ -21,6 +21,10 @@
   display: grid;
   gap: $spacing5;
 
+  .inactive-message {
+    color: $red-dark;
+  }
+
   p,
   b {
     font-size: $font-small;
