--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -59,6 +59,7 @@ $spacing18: 48rem;
 // Border
 $border-radius: 1px;
 $border: 1px solid $black;
+$border-light: 1px solid $grey-light;
 
 // App height
 $app-height: var(--app-height);
