Add calendar component to desktop view

--- a/components/dashboard/TopNav/TopNav.module.scss
+++ b/components/dashboard/TopNav/TopNav.module.scss
@@ -17,6 +17,7 @@
     justify-content: start;
     align-items: center;
     align-content: center;
+    cursor: pointer;
 
     p {
       font-weight: $weight-bold;
