--- a/styles/DayPicker.scss
+++ b/styles/DayPicker.scss
@@ -1,7 +1,7 @@
 @import 'styles/Variables';
 
 :root {
-  --rdp-cell-size: 29.5px;
+  --rdp-cell-size: 28px;
   --rdp-accent-color: #18e597;
   --rdp-background-color: #e8fcf5;
   /* Outline border for focused elements */
@@ -12,7 +12,6 @@
 
 .rdp {
   margin: 0;
-  margin-left: -11px;
 
   .rdp-nav {
     margin-right: $spacing1;
@@ -56,7 +55,7 @@
     font-size: $font-small;
     text-transform: initial;
     color: $grey;
-    font-weight: $weight-semi-bold;
+    font-weight: $weight-normal;
   }
 
   .rdp-day {
@@ -66,7 +65,7 @@
   }
 
   .rdp-cell {
-    padding: 5px 8px;
+    padding: 3.5px 8.5px;
   }
 
   .rdp-day_selected {
