fix slider safari mobile box-shadow issue

--- a/global_components/Slider/Slider.module.scss
+++ b/global_components/Slider/Slider.module.scss
@@ -40,6 +40,7 @@
   &::-webkit-slider-thumb {
     -webkit-appearance: none;
 
+    box-shadow: none;
     width: 10px;
     height: 40px;
     border-radius: $border-radius;
