fix margin safari bug

--- a/global_components/Button/Button.module.scss
+++ b/global_components/Button/Button.module.scss
@@ -11,6 +11,7 @@
   font-weight: $weight-bold;
   border: $border;
   border-radius: $border-radius;
+  margin: 0;
 
   &:hover {
     box-shadow: 0px 0px $true-black;
