--- a/components/dashboard/Dashboard.module.scss
+++ b/components/dashboard/Dashboard.module.scss
@@ -35,7 +35,7 @@
     }
 
     @media screen and (min-width: 1175px) {
-      grid-template-columns: auto 1fr;
+      grid-template-columns: 325px 1fr;
 
       .progress-wrapper {
         justify-self: initial;
