--- a/styles/_Variables.scss
+++ b/styles/_Variables.scss
@@ -69,6 +69,11 @@ $app-height: var(--app-height);
   box-shadow: inset 0 -12px 0px 0px $green-light;
 }
 
+@mixin underline-red {
+  display: inline;
+  box-shadow: inset 0 -12px 0px 0px $red-light;
+}
+
 @mixin underline-grey {
   display: inline;
   box-shadow: inset 0 -12px 0px 0px $grey-light;
