--- a/global_components/ActivityCard/ActivityCard.module.scss
+++ b/global_components/ActivityCard/ActivityCard.module.scss
@@ -14,6 +14,7 @@
 
   .content {
     cursor: pointer;
+    position: relative;
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center;
